Fix navbar on smaller screens.

--- a/less/variables.less
+++ b/less/variables.less
@@ -64,3 +64,8 @@
 @panel-inner-border:          #ddd;
 @panel-footer-bg:             #f5f5f5;
 
+// Navbar collapse
+//** Point at which the navbar becomes uncollapsed.
+@grid-float-breakpoint:     @screen-md-min;
+//** Point at which the navbar begins collapsing.
+@grid-float-breakpoint-max: (@grid-float-breakpoint - 1);
